Dev: backface visibility and DOM model issues

--- a/src/sass/source/elements/_sheet.scss
+++ b/src/sass/source/elements/_sheet.scss
@@ -5,8 +5,9 @@ plurid-sheet {
     background-color: hsl(0, 0%, 30%);
     padding: 50px;
     padding-top: 100px;
+    // backface-visibility: hidden;
 
-    transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
+    // transform: translateX(0px) translateY(0px) translateZ(0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1);
     // transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5, 10, 0, 1);
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
